# ZapCapture

./: .gitignore  AGENTS.md  Dockerfile  LightningGUI.py  README.md  core.py  gui_desktop.py  gui_web.py  logging_config.py  pyproject.toml  scratch_test_watermark.py
assets/: USER_GUIDE.md
assets/favicons/: site.webmanifest
assets/icons/: macos.icns
