[project]
name = "zapcapture-ng"
version = "2.0.0"
description = "Lightning Strike Detector with Desktop and Web interfaces based on zapcapture"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "imageio",
    "numpy",
    "pillow",
]

[project.optional-dependencies]
desktop = [
    "PySide6",
    "opencv-python",
]

web = [
    "nicegui",
    "opencv-python-headless",
]

# This tells uv to just install the dependencies without trying 
# to build the local files into an installable Python package.
[tool.uv]
package = false